--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -14,8 +14,14 @@ jobs:
 
     - name: Setup Docker Environment
       run: |
-        echo "IMAGE_NAME=myrepo/myapp:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
+        IMAGE_NAME="${{ github.repository_owner }}/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]'):$GITHUB_SHA"
+        echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/$IMAGE_NAME" >> $GITHUB_ENV
+
+    - name: Print environment variables
+      run: |
+        echo "Image Name: ${{ env.IMAGE_NAME }}"
+        echo "Full Image Name: ${{ env.FULL_IMAGE_NAME }}"
 
     - name: Build Docker Image
       run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
