--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -14,7 +14,9 @@ jobs:
 
     - name: Setup Docker Environment
       run: |
-        IMAGE_NAME="${{ github.repository_owner }}/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]'):$GITHUB_SHA"
+        REPO_NAME="$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
+        REPO_NAME="${REPO_NAME#*/}"  # Removes the username/organization part if included
+        IMAGE_NAME="${REPO_NAME}:$GITHUB_SHA"
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
         echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/$IMAGE_NAME" >> $GITHUB_ENV
 
