--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -12,16 +12,15 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Setup Docker Environment
+    - name: Set up Docker Image Name
       run: |
-        REPO_NAME="$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
-        REPO_NAME="${REPO_NAME#*/}"  # Removes the username/organization part if included
-        IMAGE_NAME="${REPO_NAME}:$GITHUB_SHA"
-        echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/$IMAGE_NAME" >> $GITHUB_ENV
+        echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> $GITHUB_ENV
+        echo "IMAGE_NAME=${{ github.repository_owner }}/elasticsearch-rust-autocomplete:${GITHUB_SHA}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
 
-    - name: Print environment variables
+    - name: Print Environment Variables
       run: |
+        echo "Project ID: ${{ env.PROJECT_ID }}"
         echo "Image Name: ${{ env.IMAGE_NAME }}"
         echo "Full Image Name: ${{ env.FULL_IMAGE_NAME }}"
 
@@ -41,7 +40,7 @@ jobs:
 
     - name: Deploy to Google Cloud Run
       run: |
-        gcloud run deploy my-service \
+        gcloud run deploy elasticsearch-rust-autocomplete \
           --image ${{ env.FULL_IMAGE_NAME }} \
           --region ${{ secrets.RUN_REGION }} \
           --platform managed \
