--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,10 +1,3 @@
-name: Build and Deploy Docker Image
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -12,17 +5,14 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Set up Docker Image Name
+    - name: Set up Environment Variables
       run: |
         echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> $GITHUB_ENV
-        echo "IMAGE_NAME=${{ github.repository_owner }}/elasticsearch-rust-autocomplete:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
-
-    - name: Print Environment Variables
-      run: |
-        echo "Project ID: ${{ env.PROJECT_ID }}"
-        echo "Image Name: ${{ env.IMAGE_NAME }}"
-        echo "Full Image Name: ${{ env.FULL_IMAGE_NAME }}"
+        echo "IMAGE_NAME=myrepo/myapp:${GITHUB_SHA}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
+        echo "PROJECT_ID: $PROJECT_ID"
+        echo "IMAGE_NAME: $IMAGE_NAME"
+        echo "FULL_IMAGE_NAME: $FULL_IMAGE_NAME"
 
     - name: Build Docker Image
       run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
@@ -37,11 +27,3 @@ jobs:
 
     - name: Push Image to Google Container Registry
       run: docker push ${{ env.FULL_IMAGE_NAME }}
-
-    - name: Deploy to Google Cloud Run
-      run: |
-        gcloud run deploy elasticsearch-rust-autocomplete \
-          --image ${{ env.FULL_IMAGE_NAME }} \
-          --region ${{ secrets.RUN_REGION }} \
-          --platform managed \
-          --allow-unauthenticated
