--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,10 +1,3 @@
-name: Build and Deploy Docker Image
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -12,14 +5,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Set up Environment Variables
+    - name: Setup Docker Environment
       run: |
-        echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> $GITHUB_ENV
-        echo "IMAGE_NAME=myrepo/myapp:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
-        echo "PROJECT_ID: $PROJECT_ID"
-        echo "IMAGE_NAME: $IMAGE_NAME"
-        echo "FULL_IMAGE_NAME: $FULL_IMAGE_NAME"
+        echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/${IMAGE_NAME}" >> $GITHUB_ENV
 
     - name: Build Docker Image
       run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
@@ -34,3 +23,11 @@ jobs:
 
     - name: Push Image to Google Container Registry
       run: docker push ${{ env.FULL_IMAGE_NAME }}
+
+    - name: Deploy to Google Cloud Run
+      run: |
+        gcloud run deploy my-service \
+          --image ${{ env.FULL_IMAGE_NAME }} \
+          --region ${{ secrets.RUN_REGION }} \
+          --platform managed \
+          --allow-unauthenticated
