--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  RUN_REGION: us-central1
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
     - name: Setup Docker Environment
       run: |
         echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/${IMAGE_NAME}" >> $GITHUB_ENV
 
     - name: Build Docker Image
       run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
@@ -35,6 +38,6 @@ jobs:
       run: |
         gcloud run deploy my-service \
           --image ${{ env.FULL_IMAGE_NAME }} \
-          --region ${{ secrets.RUN_REGION }} \
+          --region ${{ env.RUN_REGION }} \
           --platform managed \
           --allow-unauthenticated
