--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Docker Environment
       run: |
         echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.PROJECT_ID }}/${IMAGE_NAME}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/${IMAGE_NAME}" >> $GITHUB_ENV
 
     - name: Build Docker Image
       run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
