--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -12,32 +12,38 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-    - name: Setup Docker Environment
-      run: |
-        echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/${IMAGE_NAME}" >> $GITHUB_ENV
+      - name: Setup Docker Environment
+        run: |
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
+          echo "FULL_IMAGE_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/$IMAGE_NAME" >> $GITHUB_ENV
 
-    - name: Build Docker Image
-      run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
+      - name: Debug Output
+        run: |
+          echo "Project ID: ${{ secrets.GCP_PROJECT_ID }}"
+          echo "Image Name: $IMAGE_NAME"
+          echo "Full Image Name: $FULL_IMAGE_NAME"
 
-    - name: Authenticate with Google Cloud
-      uses: google-github-actions/auth@v0
-      with:
-        credentials_json: ${{ secrets.GCR_SA_KEY }}
+      - name: Build Docker Image
+        run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
 
-    - name: Configure Docker to use the gcloud command-line tool as a credential helper
-      run: gcloud auth configure-docker
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCR_SA_KEY }}
 
-    - name: Push Image to Google Container Registry
-      run: docker push ${{ env.FULL_IMAGE_NAME }}
+      - name: Configure Docker to use the gcloud command-line tool as a credential helper
+        run: gcloud auth configure-docker
 
-    - name: Deploy to Google Cloud Run
-      run: |
-        gcloud run deploy my-service \
-          --image ${{ env.FULL_IMAGE_NAME }} \
-          --region ${{ env.RUN_REGION }} \
-          --platform managed \
-          --allow-unauthenticated
+      - name: Push Image to Google Container Registry
+        run: docker push ${{ env.FULL_IMAGE_NAME }}
+
+      - name: Deploy to Google Cloud Run
+        run: |
+          gcloud run deploy my-service \
+            --image ${{ env.FULL_IMAGE_NAME }} \
+            --region ${{ env.RUN_REGION }} \
+            --platform managed \
+            --allow-unauthenticated
