--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Set up Docker Image Name
       run: |
-        echo "IMAGE_NAME=${GITHUB_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
+        echo "IMAGE_NAME=${github.repository}:${github.sha}" >> $GITHUB_ENV
         echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
 
     - name: Build Docker Image
