--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -10,41 +10,44 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RUN_REGION: us-central1
-      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      # Directly refer to the GitHub secret here to ensure it's pulled correctly
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} 
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
+    - name: Checkout Repo
+      uses: actions/checkout@v2
 
-      - name: Print environment variables for debugging
-        run: |
-          echo "Project ID: $PROJECT_ID"
-          echo "GitHub Repository: ${{ github.repository }}"
-          echo "GitHub SHA: ${{ github.sha }}"
+    - name: Print Project ID for debugging
+      run: |
+        echo "Project ID: $PROJECT_ID"
 
-      - name: Set up Docker Image Name
-        run: |
-          echo "IMAGE_NAME=${{ github.repository }}:${{ github.sha }}" >> $GITHUB_ENV
-          echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
+    - name: Set up Docker Image Name
+      run: |
+        echo "IMAGE_NAME=${{ github.repository }}:${{ github.sha }}" >> $GITHUB_ENV
+        echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
 
-      - name: Build Docker Image
-        run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
+    - name: Print full image name for debugging
+      run: |
+        echo "Full Image Name: ${{ env.FULL_IMAGE_NAME }}"
 
-      - name: Authenticate with Google Cloud
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{ secrets.GCR_SA_KEY }}
+    - name: Build Docker Image
+      run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
 
-      - name: Configure Docker to use the gcloud command-line tool as a credential helper
-        run: gcloud auth configure-docker
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v0
+      with:
+        credentials_json: ${{ secrets.GCR_SA_KEY }}
 
-      - name: Push Image to Google Container Registry
-        run: docker push ${{ env.FULL_IMAGE_NAME }}
+    - name: Configure Docker to use the gcloud command-line tool as a credential helper
+      run: gcloud auth configure-docker
 
-      - name: Deploy to Google Cloud Run
-        run: |
-          gcloud run deploy my-service \
-            --image ${{ env.FULL_IMAGE_NAME }} \
-            --region ${{ env.RUN_REGION }} \
-            --platform managed \
-            --allow-unauthenticated
+    - name: Push Image to Google Container Registry
+      run: docker push ${{ env.FULL_IMAGE_NAME }}
+
+    - name: Deploy to Google Cloud Run
+      run: |
+        gcloud run deploy my-service \
+          --image ${{ env.FULL_IMAGE_NAME }} \
+          --region ${{ env.RUN_REGION }} \
+          --platform managed \
+          --allow-unauthenticated
