--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -10,20 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RUN_REGION: us-central1
-      PROJECT_ID: mosend
+      PROJECT_ID: mosend  # Hardcoded project ID
+
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Set up Docker Environment
+    - name: Setup Image Tags
       run: |
-        echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+        echo "IMAGE_TAG=$(git rev-parse HEAD)" >> $GITHUB_ENV
         echo "IMAGE_NAME=vhrechukha/elasticsearch-rust-autocomplete:$IMAGE_TAG" >> $GITHUB_ENV
         echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
-        echo "Full Image Name: $FULL_IMAGE_NAME"
 
-    - name: Build Docker Image
-      run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
+    - name: Build and Push Docker Image
+      run: |
+        echo "Building image $FULL_IMAGE_NAME"
+        docker build -t $FULL_IMAGE_NAME .
+        docker push $FULL_IMAGE_NAME
 
     - name: Authenticate with Google Cloud
       uses: google-github-actions/auth@v0
