--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,45 +1,54 @@
-name: Build and Deploy Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
+env:
+  PROJECT_ID: mosend
+  IMAGE_REPO_NAME: vhrechukha/elasticsearch-rust-autocomplete
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    env:
-      RUN_REGION: us-central1
-      PROJECT_ID: mosend  # Hardcoded project ID
 
     steps:
-    - name: Checkout Repo
+    - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Setup Image Tags
-      run: |
-        echo "IMAGE_TAG=$(git rev-parse HEAD)" >> $GITHUB_ENV
-        echo "IMAGE_NAME=vhrechukha/elasticsearch-rust-autocomplete:$IMAGE_TAG" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/$IMAGE_NAME" >> $GITHUB_ENV
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-    - name: Build and Push Docker Image
-      run: |
-        echo "Building image $FULL_IMAGE_NAME"
-        docker build -t $FULL_IMAGE_NAME .
-        docker push $FULL_IMAGE_NAME
-
-    - name: Authenticate with Google Cloud
-      uses: google-github-actions/auth@v0
+    - name: Login to Google Container Registry
+      uses: google-github-actions/setup-gcloud@master
       with:
-        credentials_json: ${{ secrets.GCR_SA_KEY }}
+        version: 'latest'
+        project_id: ${{ env.PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+      continue-on-error: false
 
-    - name: Push Image to Google Container Registry
-      run: docker push ${{ env.FULL_IMAGE_NAME }}
+    - name: Configure Docker Meta Data
+      id: docker_meta
+      uses: docker/metadata-action@v3
+      with:
+        images: gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_REPO_NAME }}
+        tags: |
+          type=sha,prefix=sha-,format=long
+          type=ref,event=branch
+          type=ref,event=pr
 
-    - name: Deploy to Google Cloud Run
-      run: |
-        gcloud run deploy my-service \
-          --image ${{ env.FULL_IMAGE_NAME }} \
-          --region ${{ env.RUN_REGION }} \
-          --platform managed \
-          --allow-unauthenticated
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ steps.docker_meta.outputs.tags }}
+        labels: ${{ steps.docker_meta.outputs.labels }}
+
+    - name: Output the Built Image
+      run: echo "Built image ${{ steps.docker_meta.outputs.tags }}"
