--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,54 +1,59 @@
-name: Build and Push Docker Image
+name: Build and Push Docker image
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-env:
-  PROJECT_ID: mosend
-  IMAGE_REPO_NAME: vhrechukha/elasticsearch-rust-autocomplete
+      - main  # Trigger on pushes to the main branch
+    tags:
+      - 'v*'  # Trigger on tag pushes that match v*
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Log in to GitHub Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Login to Google Container Registry
-      uses: google-github-actions/setup-gcloud@master
-      with:
-        version: 'latest'
-        project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-      continue-on-error: false
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.created=${{ steps.date.outputs.date }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.version=${{ github.ref }}
 
-    - name: Configure Docker Meta Data
-      id: docker_meta
-      uses: docker/metadata-action@v3
-      with:
-        images: gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_REPO_NAME }}
-        tags: |
-          type=sha,prefix=sha-,format=long
-          type=ref,event=branch
-          type=ref,event=pr
+      - name: Set up Cloud SDK
+        if: env.PROJECT_ID != ''  # Only run if PROJECT_ID is set
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
-    - name: Build and Push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ steps.docker_meta.outputs.tags }}
-        labels: ${{ steps.docker_meta.outputs.labels }}
+      - name: Push to Google Container Registry
+        if: env.PROJECT_ID != ''  # Only run if PROJECT_ID is set
+        run: |
+          echo "Pushing image to Google Cloud..."
+          docker push ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}
 
-    - name: Output the Built Image
-      run: echo "Built image ${{ steps.docker_meta.outputs.tags }}"
+# Environment variables
+env:
+  PROJECT_ID: mosend  # Set your project ID here
+
