--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,11 +1,11 @@
-name: Build and Push Docker image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch
+      - main
     tags:
-      - 'v*'  # Trigger on tag pushes that match v*
+      - v*
 
 jobs:
   build-and-push:
@@ -16,10 +16,10 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Log in to GitHub Docker Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -30,30 +30,23 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}
-          labels: |
-            org.opencontainers.image.source=${{ github.event.repository.html_url }}
-            org.opencontainers.image.created=${{ steps.date.outputs.date }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.version=${{ github.ref }}
+          tags: ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}  # Customize your image name and tag
 
-      - name: Set up Cloud SDK
-        if: env.PROJECT_ID != ''  # Only run if PROJECT_ID is set
+      - name: Set up GCP Cloud SDK
+        if: env.PROJECT_ID != ''
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           project_id: ${{ env.PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Push to Google Container Registry
-        if: env.PROJECT_ID != ''  # Only run if PROJECT_ID is set
+      - name: Push Image to Google Container Registry (if needed)
+        if: env.PROJECT_ID != ''
         run: |
           echo "Pushing image to Google Cloud..."
           docker push ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}
 
-# Environment variables
 env:
-  PROJECT_ID: mosend  # Set your project ID here
-
+  PROJECT_ID: 'mosend'  # Ensure this is set if you're using GCP
