--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,41 @@
-name: Build and Deploy Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    env:
-      RUN_REGION: us-central1
-      PROJECT_ID: mosend
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Print Project ID for debugging
-      run: |
-        echo "Project ID: $PROJECT_ID"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Set up Docker Image Name
-      run: |
-        echo "IMAGE_NAME=${{ github.repository }}:${{ github.sha }}" >> $GITHUB_ENV
-        echo "FULL_IMAGE_NAME=gcr.io/$PROJECT_ID/${{ env.IMAGE_NAME }}" >> $GITHUB_ENV
+      - name: Build Elasticsearch Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: setup-elasticsearch/
+          file: setup-elasticsearch/Dockerfile
+          push: true
+          tags: ghcr.io/vhrechukha/elasticsearch:${{ github.sha }}
 
-    - name: Print full image name for debugging
-      run: |
-        echo "Full Image Name: ${{ env.FULL_IMAGE_NAME }}"
+      - name: Build Rust App Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: app/
+          file: app/Dockerfile
+          push: true
+          tags: ghcr.io/vhrechukha/rust-app:${{ github.sha }}
 
-    - name: Build Docker Image
-      run: docker build -t ${{ env.FULL_IMAGE_NAME }} .
+      - name: Run Docker Compose
+        run: |
+          docker-compose -f docker-compose.yml up -d --build
 
-    - name: Authenticate with Google Cloud
-      uses: google-github-actions/auth@v0
-      with:
-        credentials_json: ${{ secrets.GCR_SA_KEY }}
-
-    - name: Configure Docker to use the gcloud command-line tool as a credential helper
-      run: gcloud auth configure-docker
-
-    - name: Push Image to Google Container Registry
-      run: docker push ${{ env.FULL_IMAGE_NAME }}
-
-    - name: Deploy to Google Cloud Run
-      run: |
-        gcloud run deploy my-service \
-          --image ${{ env.FULL_IMAGE_NAME }} \
-          --region ${{ env.RUN_REGION }} \
-          --platform managed \
-          --allow-unauthenticated
