--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -1,52 +1,23 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
     branches:
       - main
-    tags:
-      - v*
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}  # Customize your image name and tag
-
-      - name: Set up GCP Cloud SDK
-        if: env.PROJECT_ID != ''
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          project_id: ${{ env.PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
-      - name: Push Image to Google Container Registry (if needed)
-        if: env.PROJECT_ID != ''
+      - name: Build and Push Docker Compose Services
         run: |
-          echo "Pushing image to Google Cloud..."
-          docker push ghcr.io/${{ github.repository_owner }}/my-image:${{ github.sha }}
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
 
-env:
-  PROJECT_ID: 'mosend'  # Ensure this is set if you're using GCP
