--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,41 @@
-name: Build and Push Docker Images
+services:
+  elasticsearch:
+    build: 
+      context: setup-elasticsearch/
+      dockerfile: Dockerfile
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.0.0
+    container_name: kibana
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
 
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  rust_app:
+    build:
+      context: app/
+      dockerfile: Dockerfile
+    environment:
+      - RUST_LOG=info
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    ports:
+      - "8080:8080"
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./app/:/usr/src/app
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build and Push Docker Compose Services
-        run: |
-          docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml push
-
+volumes:
+  esdata:
+    driver: local
