--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -29,14 +29,14 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCR_SA_KEY }}
+          credentials_json: ${{ secrets.GSR_SA_KEY }}
           cleanup_credentials: true
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCR_SA_KEY }}
+          service_account_key: ${{ secrets.GSR_SA_KEY }}
 
       - name: Build Docker Compose Services
         run: |
