--- a/.github/workflows/gcr-deploy.yml
+++ b/.github/workflows/gcr-deploy.yml
@@ -59,6 +59,6 @@ jobs:
             --image "$IMAGE_NAME" \
             --platform "managed" \
             --allow-unauthenticated \
-            --region ${{ secrets.GCP_REGION }}
+            --region us-central1
         env:
           PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
