--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15.0"
+awc = "3.0"
