--- a/nginx.conf
+++ b/nginx.conf
@@ -2,21 +2,21 @@ server {
     listen 8080;
 
     location / {
-        proxy_pass http://rust-app-service-url;
+        proxy_pass http://localhost:8080;  # Internal Rust app service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /kibana/ {
-        proxy_pass http://kibana-service-url;
+        proxy_pass http://kibana-service:5601;  # Internal Kibana service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /elasticsearch/ {
-        proxy_pass http://elasticsearch-service-url;
+        proxy_pass http://elasticsearch-service:9200;  # Internal Elasticsearch service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
