--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.0.0
@@ -25,7 +25,7 @@ services:
   rust_app:
     build:
       context: app/
-      dockerfile: Dockerfile
+    container_name: rust_app
     environment:
       - RUST_LOG=info
       - ELASTICSEARCH_URL=http://elasticsearch:9200
@@ -35,6 +35,17 @@ services:
       - elasticsearch
     volumes:
       - ./app/:/usr/src/app
+
+  nginx:
+    build:
+      context: nginx/
+    container_name: nginx
+    ports:
+      - "80:8080"
+    depends_on:
+      - elasticsearch
+      - kibana
+      - rust_app
 
 volumes:
   esdata:
