--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "9200:9200"
     volumes:
       - esdata:/usr/share/elasticsearch/data
+    networks:
+      - elk
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.0.0
@@ -18,9 +20,11 @@ services:
     ports:
       - "5601:5601"
     environment:
-      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
       - elasticsearch
+    networks:
+      - elk
 
   rust_app:
     build:
@@ -35,18 +39,26 @@ services:
       - elasticsearch
     volumes:
       - ./app/:/usr/src/app
+    networks:
+      - elk
 
   nginx:
     build:
       context: nginx/
     container_name: nginx
     ports:
-      - "80:8080"
+      - "80:80"
     depends_on:
       - elasticsearch
       - kibana
       - rust_app
+    networks:
+      - elk
 
 volumes:
   esdata:
     driver: local
+
+networks:
+  elk:
+    driver: bridge
