--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,35 @@
-server {
-    listen 8080;
+user  nginx;
+worker_processes  auto;
 
-    location / {
-        proxy_pass http://localhost:8080;  # Internal Rust app service
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-    location /kibana/ {
-        proxy_pass http://kibana-service:5601;  # Internal Kibana service
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+events {
+    worker_connections  1024;
+}
 
-    location /elasticsearch/ {
-        proxy_pass http://elasticsearch-service:9200;  # Internal Elasticsearch service
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
     }
 }
