--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,9 +27,31 @@ http {
         listen 80;
         server_name localhost;
 
+        # Proxy to Rust App
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            proxy_pass http://rust_app:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Reverse proxy to Kibana
+        location /kibana/ {
+            proxy_pass http://kibana:5601;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Reverse proxy to Elasticsearch (optionally, if needed)
+        location /elasticsearch/ {
+            proxy_pass http://elasticsearch:9200;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
